<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MotivationFragment"
    android:background="@drawable/bg_motivation">

    <TextView
        android:id="@+id/tv_motivation_start"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:text="@string/motivation_start"
        android:fontFamily="@font/comfortaa_bold"
        android:textSize="18sp"
        android:textColor="@color/motivation_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="101dp"/>

    <TextView
        android:id="@+id/tv_motivation_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/motivation_middle"
        android:fontFamily="@font/comfortaa_bold"
        android:textSize="36sp"
        android:textColor="@color/motivation_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_motivation_start"
        android:layout_marginTop="47dp"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/impossible_animation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_motivation_middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="44dp"
        app:lottie_fileName="nothing_is_impossible_animation.json"/>

    <TextView
        android:id="@+id/tv_motivation_end"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:text="@string/motivation_end"
        android:fontFamily="@font/comfortaa_bold"
        android:textSize="18sp"
        android:textColor="@color/motivation_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintTop_toBottomOf="@id/impossible_animation"
        android:layout_marginTop="27dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>