<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/profile_background"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/tv_your_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_profile"
        android:fontFamily="@font/macherie"
        android:textSize="32dp"
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black_60"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@id/tv_your_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/pic_profile_card">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="131dp"
            android:layout_height="131dp"
            android:layout_marginTop="28dp"
            android:src="@drawable/ic_person"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Александр Тамбовцев"
            android:textColor="@color/black"
            android:fontFamily="@font/macherie"
            android:textSize="24dp"
            android:background="@color/white_70"
            app:layout_constraintTop_toBottomOf="@id/avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp">
        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="47dp">

        <TextView
            android:id="@+id/your_bday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_bday"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/lagunac"
            android:textSize="12dp"/>

        <TextView
            android:id="@+id/your_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/your_sign"
            android:fontFamily="@font/lagunac"
            android:textSize="12dp"/>
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="107dp"
            android:layout_height="53dp"
            android:id="@+id/bday_container"
            android:background="@color/bday_background"
            app:layout_constraintTop_toBottomOf="@id/your_bday"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="28"
                android:fontFamily="@font/macherie"
                android:textSize="52dp"
                android:textColor="@color/black_40"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="июля"
                android:fontFamily="@font/macherie"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
            
        <ImageView
            android:id="@+id/sign_view"
            android:layout_width="216dp"
            android:layout_height="53dp"
            app:layout_constraintStart_toEndOf="@id/bday_container"
            app:layout_constraintTop_toBottomOf="@id/your_sign"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/ib_avocado"
        android:layout_width="81dp"
        android:layout_height="81dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/sl_avocado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_menu_subtract"
    android:orientation="horizontal"
    app:layout_constraintBottom_toBottomOf="parent"
    tools:layout_editor_absoluteX="-34dp">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/person1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:src="@drawable/ic_person"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></de.hdodenhof.circleimageview.CircleImageView>

    <ImageButton
        android:id="@+id/person2"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:background="@null"
        android:src="@drawable/ic_person"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toEndOf="@+id/person1"
        app:layout_constraintTop_toTopOf="parent"></ImageButton>

    <ImageButton
        android:id="@+id/person3"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:background="@null"
        app:layout_constraintHorizontal_bias="0.83"
        android:src="@drawable/ic_person"
        app:layout_constraintEnd_toStartOf="@+id/person4"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="parent"></ImageButton>

    <ImageButton
        android:id="@+id/person4"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:scaleType="centerInside"
        android:src="@drawable/ic_person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageButton>>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="208dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>